--- a/css/style.css
+++ b/css/style.css
@@ -1077,12 +1077,12 @@ footer {
   margin-bottom: 20px;
 }
 
-.play-btn {
+.play-btn2 {
   height: 50px;
   transition: transform 0.3s ease;
 }
 
-.play-btn:hover {
+.play-btn2:hover {
   transform: scale(1.05);
 }
 
